; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/tcpdump/extr_parsenfsfh.c_is_UCX.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/tcpdump/extr_parsenfsfh.c_is_UCX.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32)* @is_UCX to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @is_UCX(i8* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 0, i32* %7, align 4
  %8 = load i32, i32* %5, align 4
  %9 = icmp slt i32 %8, 7
  br i1 %9, label %10, label %11

10:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %42

11:                                               ; preds = %2
  store i32 1, i32* %6, align 4
  br label %12

12:                                               ; preds = %38, %11
  %13 = load i32, i32* %6, align 4
  %14 = icmp slt i32 %13, 14
  br i1 %14, label %15, label %41

15:                                               ; preds = %12
  %16 = load i8*, i8** %4, align 8
  %17 = load i32, i32* %6, align 4
  %18 = sext i32 %17 to i64
  %19 = getelementptr inbounds i8, i8* %16, i64 %18
  %20 = load i8, i8* %19, align 1
  %21 = call i64 @ND_ISPRINT(i8 zeroext %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %28

23:                                               ; preds = %15
  %24 = load i32, i32* %7, align 4
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %26, label %27

26:                                               ; preds = %23
  store i32 0, i32* %3, align 4
  br label %42

27:                                               ; preds = %23
  br label %38

28:                                               ; preds = %15
  %29 = load i8*, i8** %4, align 8
  %30 = load i32, i32* %6, align 4
  %31 = sext i32 %30 to i64
  %32 = getelementptr inbounds i8, i8* %29, i64 %31
  %33 = load i8, i8* %32, align 1
  %34 = zext i8 %33 to i32
  %35 = icmp eq i32 %34, 0
  br i1 %35, label %36, label %37

36:                                               ; preds = %28
  store i32 1, i32* %7, align 4
  br label %38

37:                                               ; preds = %28
  store i32 0, i32* %3, align 4
  br label %42

38:                                               ; preds = %36, %27
  %39 = load i32, i32* %6, align 4
  %40 = add nsw i32 %39, 1
  store i32 %40, i32* %6, align 4
  br label %12

41:                                               ; preds = %12
  store i32 1, i32* %3, align 4
  br label %42

42:                                               ; preds = %41, %37, %26, %10
  %43 = load i32, i32* %3, align 4
  ret i32 %43
}

declare dso_local i64 @ND_ISPRINT(i8 zeroext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
